--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -3,8 +3,22 @@
  * and scoped locally.
  */
 
-.buttons {
+.button {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+.hero {
+  width: 75vw;
+}
+
+.container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: 2rem;
+  margin-top: 40px;
+  margin-bottom: 40px;
 }
