--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -16,6 +16,7 @@
   --ifm-color-primary-lightest: #33B8FF;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --openapi-monaco-background-color: #FFFFFF!important;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
