--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -19,6 +19,6 @@
   flex-direction: row;
   justify-content: center;
   gap: 2rem;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
 }
