feat: API versioning and linting

--- a/docs/product/PreGod/introduction.module.css
+++ b/docs/product/PreGod/introduction.module.css
@@ -1,4 +1,4 @@
-img[alt="powered by RSS3"],
-img[alt="auxiliary logo"] {
-  width: 200px;
+img[alt='powered by RSS3'],
+img[alt='auxiliary logo'] {
+    width: 200px;
 }
