--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -8,27 +8,27 @@
 /* https: //colors.muz.li/color/0074b3 */
 
 :root {
-  --ifm-color-primary: #0072FF;
-  --ifm-color-primary-dark: #0095E6;
-  --ifm-color-primary-darker: #0095E6;
-  --ifm-color-primary-darkest: #0085CC;
-  --ifm-color-primary-light: #00A6FF;
-  --ifm-color-primary-lighter: #1AAFFF;
-  --ifm-color-primary-lightest: #33B8FF;
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
-  --openapi-monaco-background-color: #fffffe !important;
+    --ifm-color-primary: #0072ff;
+    --ifm-color-primary-dark: #0095e6;
+    --ifm-color-primary-darker: #0095e6;
+    --ifm-color-primary-darkest: #0085cc;
+    --ifm-color-primary-light: #00a6ff;
+    --ifm-color-primary-lighter: #1aafff;
+    --ifm-color-primary-lightest: #33b8ff;
+    --ifm-code-font-size: 95%;
+    --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+    --openapi-monaco-background-color: #fffffe !important;
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #4dc1ff;
-  --ifm-color-primary-dark: #33B8FF;
-  --ifm-color-primary-darker: #1AAFFF;
-  --ifm-color-primary-darkest: #00A6FF;
-  --ifm-color-primary-light: #66C9FF;
-  --ifm-color-primary-lighter: #80D2FF;
-  --ifm-color-primary-lightest: #99DBFF;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
-  --openapi-monaco-background-color: #242526 !important;
+    --ifm-color-primary: #4dc1ff;
+    --ifm-color-primary-dark: #33b8ff;
+    --ifm-color-primary-darker: #1aafff;
+    --ifm-color-primary-darkest: #00a6ff;
+    --ifm-color-primary-light: #66c9ff;
+    --ifm-color-primary-lighter: #80d2ff;
+    --ifm-color-primary-lightest: #99dbff;
+    --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+    --openapi-monaco-background-color: #242526 !important;
 }
