--- a/versioned_docs/version-v0.4.0/product/PreGod/introduction.module.css
+++ b/versioned_docs/version-v0.4.0/product/PreGod/introduction.module.css
@@ -1,4 +1,4 @@
-img[alt="powered by RSS3"],
-img[alt="auxiliary logo"] {
-  width: 200px;
+img[alt='powered by RSS3'],
+img[alt='auxiliary logo'] {
+    width: 200px;
 }
